--- a/app/(routes)/globals.css
+++ b/app/(routes)/globals.css
@@ -15,9 +15,15 @@ body {
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 2rem;
   font-weight: 700;
-  line-height: 4rem;
+  line-height: 2rem;
+
+  @media (min-width: 1024px) {
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 4rem;
+  }
 }
 
 h2 {
